welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:14: error: not found: value getLongueurMonde
    if(getX() == getLongueurMonde() -1){
                 ^